welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: not found: value estSurjaune
} while (estSurjaune()==true)
         ^