welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
do {
  avance()
} while (estSurjaune()==true)
  avance()
